# libsignal-protocol-nif

./: .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_MATRIX.md  Makefile  README.md  README_NEXT_AGENT.md  TEST_COVERAGE_ANALYSIS.md  all_runs.html  rebar.config  rebar3.crashdump  shell.nix  suite.log.latest.html
.github/workflows/: ci.yml
c_src/: CMakeLists.txt  libsignal_protocol_nif.c  nif.c  signal_nif.c
c_src/cmake/: FindErlang.cmake  FindOpenSSL.cmake
c_src/crypto/: CMakeLists.txt  crypto.c  crypto.h
c_src/keys/: keys.c
c_src/nif/: CMakeLists.txt  performance.c  performance.h  signal_nif.c  signal_nif.h
c_src/protocol/: CMakeLists.txt  protocol.c  protocol.h  signal_protocol.c  signal_protocol.h
c_src/utils/: utils.c
docker/: Dockerfile
docs/: ARCHITECTURE.md  ARCHITECTURE_RESOLUTION_SUCCESS.md  ARM64_SEGFAULT_SOLUTION.md  CROSS_LANGUAGE_COMPARISON.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_PLAN.md  DOUBLE_RATCHET_IMPLEMENTATION.md  DOUBLE_RATCHET_IMPLEMENTATION_SUMMARY.md  FINAL_SPRINT_SUMMARY.md  HANDOFF_TO_NEXT_AGENT.md  IMMEDIATE_ACTIONS.md  IMPLEMENTATION.md  NEXT_PHASE_HANDOFF.md  README_NEXT_AGENT.md  RESOLUTION_SUMMARY.md  SEGFAULT_FIX_SUMMARY.md  TROUBLESHOOTING.md
erl_src/: libsignal_protocol_nif.app.src  libsignal_protocol_nif.erl  libsignal_protocol_nif_v2.erl  nif.app.src  nif.erl  session.erl  signal_nif.erl  signal_session.erl  test_simple_nif.erl  working_nif.erl
erl_src/include/: signal_types.hrl
erl_src/lib/: crypto.erl  protocol.erl  signal_crypto.erl
include/: signal_types.hrl
lib/: libsignal-protocol-nif.app.src  signal_crypto.erl  signal_nif.erl  signal_protocol.erl  signal_session.erl  signal_types.erl
scripts/: copy_nifs.sh  release.sh  test_coverage_improvements.sh
src/: libsignal_protocol_nif.app.src  libsignal_protocol_nif.erl  libsignal_protocol_nif_dummy.erl
test/: COVERAGE_MATRIX.md
test/elixir/: libsignal_protocol_test.exs  signal_protocol_test.exs
test/erl/: all_tests.spec  coverage_test_SUITE.erl  crypto_wrapper_SUITE.erl  debug_module_SUITE.erl  final_deployment_test.erl  integration_SUITE.erl  nif_functions_SUITE.erl  protocol_SUITE.erl  session.spec  session_SUITE.erl  session_management_SUITE.erl  signal_crypto_SUITE.erl  signal_protocol_test_SUITE.erl  signal_session.spec  signal_session_SUITE.erl  simple_test_SUITE.erl  test.config  test_double_ratchet_complete.erl  test_double_ratchet_v2.erl
test/erl/integration/: integration_SUITE.erl
test/erl/integration/performance/: performance_test.erl
test/erl/smoke/: simple_module_test_SUITE.erl
test/erl/unit/crypto/: signal_crypto_SUITE.erl
test/erl/unit/nif/: coverage_test_SUITE.erl  nif_functions_SUITE.erl
test/erl/utils/: test_data.erl  test_helpers.erl
test/gleam/: README.md  gleam.toml
test/performance/: performance_test.erl
wrappers/elixir/: README.md  erl_crash.dump  libsignal_protocol-0.1.0.tar  mix.exs
wrappers/elixir/lib/: libsignal_protocol.ex  pre_key_bundle.ex  session.ex  signal_protocol.ex
wrappers/elixir/test/: libsignal_protocol_test.exs  pre_key_bundle_test.exs  session_test.exs  test_helper.exs
wrappers/gleam/: README.md  gleam.toml  manifest.toml  rebar.config
wrappers/gleam/src/: libsignal_protocol_gleam.app.src  pre_key_bundle.gleam  session.gleam  signal_protocol.gleam  utils.gleam
wrappers/gleam/src/signal_protocol/: pre_key_bundle.gleam  session.gleam  utils.gleam
wrappers/gleam/test/: pre_key_bundle_test.gleam  session_test.gleam  signal_protocol_test.gleam  utils_test.gleam
